--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.14.4",
+    "axios": "^1.4.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
-    "next": "13.4.12",
+    "next": "^13.4.13",
+    "next-auth": "^4.23.0",
+    "node-fetch": "^2.6.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-player": "^2.12.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.20",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
