--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-player": "^2.12.0"
+    "react-player": "^2.12.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.20",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.3"
   }
 }
